# api_jupyter_notebook

./: api.py  base.py  db_credentials.env  db_queries.py  docker-compose.yml  dockerfile  insert.py  jupyter_db.py  main.py  pyproject.toml
modules/: __init__.py  iorw.py
notebooks/: Rcc Demo Study Token.ipynb  Simple_Print_Params.ipynb
